# assembler

./: .gitignore  CMakeLists.txt  README.md  TODO.md  a.out  fiska.out  plan.md  test.cc  test.rs
another_old_lib/: x86_assembler.hh  x86_patterns.hh  x86_utils.cc  x86_utils.hh
another_old_lib/codegen/: ir.hh
another_old_lib/front_end/: context.cc  lexer.cc  lexer.hh  parser.cc  parser.hh
another_old_lib/instructions/: syscall.hh
another_old_lib/testing/: elf.cc
archive/old_lib1/: x86_core.cc
archive/old_lib2/codegen/: elf.cc
archive/old_lib2/front_end/: support.cc
archive/old_lib2/instructions/: emitter.cc  mov.hh
archive/old_lib3/codegen/: assembler.hh  patterns.cc  patterns.hh
archive/old_lib3/codegen/instrs/: shard0.hh
archive/old_lib3/front_end/: ctx.cc  ctx.hh  ctx2.hh
archive/old_lib3/x86/: common.cc
archive/old_lib4/backend/: ir.cc  ir.hh
archive/old_lib4/backend/codegen/: emitters.cc  emitters.hh  object.cc  object.hh
archive/old_lib4/backend/x86instructions/: assembler.cc
archive/old_lib4/common/: elf.hh  support.hh
archive/old_lib4/common/x86/: types.cc
archive/old_lib4/frontend/: ast.hh  lexer.cc  parser.cc  sema.cc  sema.hh
exec/: main.cc
lib/: core.cc  core.hh  elf.cc  elf.hh  front_end.cc  front_end.hh  x86_assembler.cc  x86_assembler.hh  x86_core.cc  x86_core.hh  x86_patterns.hh  x86_utils.cc  x86_utils.hh
lib/backend/: ir.cc  ir.hh
lib/backend/codegen/: emitters.cc  emitters.hh  object.cc  object.hh  patterns.hh
lib/backend/x86instructions/: assembler.cc  assembler.hh  x86-instructions-shard-0.hh
lib/codegen/: assembler.cc  assembler.hh  elf.cc  elf.hh  ir.cc  ir.hh  patterns.hh
lib/codegen/instrs/: emitter.cc  emitter.hh  shard0.hh
lib/common/: base.cc  base.hh  elf.hh  support.cc  support.hh
lib/common/x86/: types.cc  types.hh
lib/front_end/: ctx.cc  ctx.hh  lexer.cc  lexer.hh  parser.cc  parser.hh  support.cc  support.hh
lib/frontend/: ast.hh  ctx.cc  ctx.hh  lexer.cc  lexer.hh  parser.cc  parser.hh  sema.cc  sema.hh  token.hh
lib/instructions/: add.hh  emitter.cc  emitter.hh  mov.hh  syscall.hh
lib/support/: core.cc  core.hh  fe_utils.cc  fe_utils.hh
lib/testing/: elf.cc  elf.hh
lib/x86/: common.cc  common.hh
old_lib/: core.hh  elf.cc  front_end.hh
old_lib1/: core.cc  elf.hh  front_end.cc
old_lib2/: core.hh  x86_common.hh  x86_utils.hh
old_lib2/codegen/: elf.hh  ir.cc
old_lib2/front_end/: context.hh  support.hh
old_lib2/testing/: elf.hh
old_lib3/codegen/: elf.cc  elf.hh  ir.hh
old_lib3/codegen/instrs/: emitter.hh
old_lib3/front_end/: ctx2.cc  parser.cc  parser.hh
old_lib3/x86/: common.hh
tests/: a.out  mov.asm  mov.fiska
